# curso-llm-bsc

./: .gitignore
week-01/ex-01-tokenise/: README.md  ex_01_tokenise.py  pyproject.toml
week-01/ex-02-base-vs-aligned/: README.md  pyproject.toml  simple_gpt2.py  simple_qwen3.py
week-01/ex-05-easychatgpt/: main.py
week-01/ex-05-easychatgpt/frontend/: app.js
week-01/ex-05-easychatgpt2/: README.md  main.py
week-01/ex-05-easychatgpt2/frontend/: app.js  index.html
week-01/ex-05-easychatgpt3/: main.py
week-01/ex-05-easychatgpt3/frontend/: app.js  index.html
week-01/ex-05-easychatgpt4/: docker-compose.yml  main.py
week-01/ex-05-easychatgpt4/frontend/: app.js  index.html  style.css
week-01/ex-05-easychatgpt4/historiales/: historial_preuba.json
week-01/moodle-bot/: README.md  check_last_user.py  cookies.txt  leer_foro.py  prueba_publicar_foro.py  publicar_foro.py
week-02/ex-01 simpleRag/: docker-compose.yml  main.py  requirements.txt
week-02/ex-01 simpleRag/agents_data/: AI expert assistent.json  Capitals expert.json  asistente curso IA.json
week-02/ex-01 simpleRag/frontend/: app.js  index.html  style.css
week-02/ex-02-03/programas utilizados/03-embeddings-explorer/: .env.example  .gitignore  README.md  embeddings_explorer.py  pyproject.toml
week-02/ex-02-03/programas utilizados/04-collections-explorer/: .env.example  README.md  collections_explorer.py  pyproject.toml
week-02/ex-02-03/programas utilizados/05-embeddings-rag-explorer/: .env.example  .gitignore  README.md  embeddings_rag_explorer.py  knowledge.txt  pyproject.toml
week-02/ex-02-03/programas utilizados/simple-dynamic-rag/: .env.example  .gitignore  README.md  chunking.py  ingest.py  pyproject.toml  simple_dynamic_rag.py
week-02/ex-02-03/programas utilizados/simple-dynamic-rag/docs/: acme-handbook.md
